tests/models/enum/named/bool/fail/ge.stderr
error: Support condition is alias, default and validate
 --> tests/models/enum/named/bool/fail/ge.rs:6:9
  |
6 |         value: bool
  |         ^^^^^
